[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LMPResume"
version = "0.0.1"
authors = [{ name = "Egor Perevoshchikov", email = "abkein@abkein.ru" }]
description = "Test package"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# dependencies = ['MPMU >= 0.0.2', 'pysbatch-ng >= 0.0.1', 'toml']

[project.scripts]
LMPResume = "LMPResume.main:main"
LMPResumeRestart = "LMPResume.restart:main"

[project.urls]
"Homepage" = "https://github.com/Architect0rr/MDDPN"
"Bug Tracker" = "https://github.com/Architect0rr/MDDPN/issues"
